[package]
name = "crm"
version = "0.1.0"
authors = ["wtklbm <wtklbm@gmail.com>"]
description = "crm can help you easy and fast switch between different cargo registries, now include: rustcc, sjtu, tuna, ustc, rsproxy."
homepage = "https://github.com/wtklbm/crm"
repository = "https://github.com/wtklbm/crm.git"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "crates.io", "registry"]
exclude = [".vscode/**"]

[profile.release]
lto = true
panic = "abort"
incremental = true

[dependencies]
toml = "0.5.8"
mrq = { version = "0.1.0", features = ["https"] }
