[package]
name = "crm"
version = "0.1.8"
authors = ["wtklbm <wtklbm@gmail.com>"]
description = "crm can help you easy and fast switch between different cargo registries, now include: rustcc, sjtu, tuna, ustc, rsproxy."
homepage = "https://github.com/wtklbm/crm"
repository = "https://github.com/wtklbm/crm.git"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "registry"]
exclude = [".vscode/**"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z'
panic = "abort"

[dependencies]
toml_edit = "0.2.1"
ureq = "2.1.1"
