[package]
name        = "crm"
version     = "0.2.2"
authors     = ["wtklbm <wtklbm@gmail.com>"]
description = "crm can help you easy and fast switch between different cargo registries, now include: sjtu, tuna, ustc, rsproxy, bfsu, nju, hit, cqu, zju, CERNET."
homepage    = "https://github.com/wtklbm/crm"
repository  = "https://github.com/wtklbm/crm.git"
edition     = "2018"
license     = "MIT OR Apache-2.0"
keywords    = ["cargo", "registry"]
exclude     = [".vscode/**"]

[profile.release]
codegen-units = 1
opt-level     = "z"
panic         = "abort"
strip         = true
#lto = "fat"

[profile.dev]
codegen-units = 512

[dependencies]
toml_edit = "0.2.1"
ureq      = "2.1.1"
